--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Services — Darren Steptoe</title>
-  <meta name="description" content="Media production services and campaign consulting." />
+  <meta name="description" content="Media production services and political consulting." />
   <link rel="stylesheet" href="./styles.css" />
 
   <meta name="referrer" content="strict-origin-when-cross-origin" />
@@ -13,25 +13,14 @@
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="icon" href="./assets/img/icon-192.png" />
   <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
-
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self';
-    base-uri 'self';
-    object-src 'none';
-    frame-ancestors 'none';
-    img-src 'self' data: https:;
-    style-src 'self';
-    script-src 'self' https://assets.calendly.com;
-    connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com;
-    frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com;
-    form-action 'self' https://formspree.io;
-    upgrade-insecure-requests" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
 </head>
 
 <body class="page-services">
+  
   <a class="skip-link" href="#main">Skip to content</a>
+<main class="wrap" id="main">
 
-  <main class="wrap" id="main">
     <header class="header">
       <h1 class="title">Services</h1>
       <p class="sub">Media production • Consulting</p>
@@ -70,13 +59,91 @@
         <iframe
           src="https://www.youtube.com/embed/ycHys4e6s3Q"
           title="YouTube video"
-          loading="lazy"
-          referrerpolicy="strict-origin-when-cross-origin"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
       </div>
     </section>
+
+    <section class="panel" aria-label="Media Production Intake form">
+      <h2 class="h2">Media Production Intake Form</h2>
+
+      <form
+        id="contactForm"
+        action="https://formspree.io/f/xdalazpw"
+        method="POST"
+        class="contactForm"
+        novalidate
+      >
+        <label>
+          Name *
+          <input type="text" name="name" autocomplete="name" required>
+        </label>
+
+        <label>
+          Telephone *
+          <input type="tel" name="telephone" autocomplete="tel" inputmode="tel" required>
+        </label>
+
+        <label>
+          Email *
+          <input type="email" name="email" autocomplete="email" required>
+        </label>
+
+        <label>
+          Date of Event *
+          <input type="date" name="date_of_event" required>
+        </label>
+
+        <label>
+          Event Type *
+          <select id="eventTypeSelect" name="event_type" required>
+            <option value="" selected disabled>Select one…</option>
+            <option>Wedding &amp; Pre-Wedding</option>
+            <option>Interview</option>
+            <option>Event Videography</option>
+            <option>Product &amp; Commercial</option>
+            <option>Architectural &amp; Interior</option>
+            <option>Birthday &amp; Anniversary</option>
+            <option value="Other">Other</option>
+          </select>
+        </label>
+
+        <label id="eventTypeOtherWrap" class="hidden">
+          Please specify *
+          <input
+            type="text"
+            id="eventTypeOther"
+            name="event_type_other"
+            placeholder="Type here…"
+            autocomplete="off"
+          >
+        </label>
+
+        <label>
+          Details *
+          <textarea name="details" rows="6" required placeholder="Share the key details (location, hours needed, deliverables, vibe, etc.)"></textarea>
+        </label>
+
+        <label>
+          Promo Code
+          <input type="text" name="promo_code" autocomplete="off">
+        </label>
+
+        <div class="hp" aria-hidden="true">
+          <label>
+            Leave this field empty
+            <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
+          </label>
+        </div>
+
+        <button id="submitBtn" type="submit">Send</button>
+
+        <p id="formStatus" class="formStatus" role="status" aria-live="polite"></p>
+      </form>
+    </section>
+
+    <hr class="sectionRule" aria-hidden="true">
 
     <section class="panel" aria-label="Political Consulting">
       <h2 class="h2">Political Consulting</h2>
@@ -139,74 +206,55 @@
           <h4>Platinum — $5,200</h4>
           <ul>
             <li>Up to 12 hours</li>
-            <li>Specialty cameras</li>
-            <li>Ceremony + speeches</li>
-            <li>48-hr teaser</li>
-            <li>7-day delivery</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="pricingGrid" aria-label="Wedding add-ons">
-        <div class="pricingCard">
-          <h4>Additional Hour — $125</h4>
-          <ul>
-            <li>Applies beyond the booked package</li>
+            <li>Immersive specialty cameras</li>
+            <li>Full ceremony + speeches</li>
+            <li>48-hr teaser • 7-day delivery</li>
           </ul>
         </div>
       </div>
 
       <h3>Event &amp; Promotional</h3>
-      <div class="pricingGrid twoCol" aria-label="Event pricing">
+      <div class="pricingGrid twoCol" aria-label="Event and promotional">
         <div class="pricingCard">
           <h4>Half Day — $600</h4>
-          <ul>
-            <li>Up to 4 hours</li>
-            <li>60–90 sec highlight</li>
-          </ul>
+          <p>Up to 4 hrs • 60–90 sec highlight</p>
         </div>
 
         <div class="pricingCard">
           <h4>Full Day — $1,000</h4>
+          <p>Up to 8 hrs • 2–3 min highlight</p>
+        </div>
+      </div>
+
+      <div class="pricingGrid mt-14" aria-label="Add-ons">
+        <div class="pricingCard">
+          <h4>Additional Hour — $125</h4>
           <ul>
-            <li>Up to 8 hours</li>
-            <li>2–3 min highlight</li>
+            <li>Applied when coverage runs beyond the booked package.</li>
           </ul>
         </div>
       </div>
 
       <h3>Corporate &amp; Small Business</h3>
-      <div class="pricingGrid" aria-label="Business pricing">
+      <div class="pricingGrid twoCol" aria-label="Corporate and small business">
         <div class="pricingCard">
           <h4>Brand Promo — $1,200</h4>
-          <ul>
-            <li>Interview + b-roll</li>
-            <li>2–3 min film</li>
-            <li>Social cut</li>
-          </ul>
+          <p>Interview + b-roll • 2–3 min film • Social cut</p>
         </div>
 
         <div class="pricingCard">
           <h4>Executive Interview — $850</h4>
-          <ul>
-            <li>Up to 2 hours</li>
-            <li>1–2 min polished edit</li>
-          </ul>
+          <p>Up to 2 hrs • 1–2 min polished edit</p>
         </div>
 
         <div class="pricingCard">
-          <h4>Monthly Content — from $2,500</h4>
-          <ul>
-            <li>1 filming day</li>
-            <li>3–5 edited videos</li>
-          </ul>
+          <h4>Monthly Content — From $2,500</h4>
+          <p>1 filming day • 3–5 edited videos</p>
         </div>
 
         <div class="pricingCard">
-          <h4>Custom Package — quote</h4>
-          <ul>
-            <li>Multi-day / multi-location / recurring</li>
-          </ul>
+          <h4>Custom Package — Quote</h4>
+          <p>For recurring work, multi-day shoots, or multi-location coverage.</p>
         </div>
       </div>
 
@@ -214,230 +262,68 @@
       <div class="pricingGrid twoCol" aria-label="Documentary and editing">
         <div class="pricingCard">
           <h4>Editing — $85/hr</h4>
-          <ul>
-            <li>5-hour minimum per project phase</li>
-          </ul>
+          <p>5-hour minimum per project phase.</p>
         </div>
 
         <div class="pricingCard">
-          <h4>Full Documentary Support — quote</h4>
-          <ul>
-            <li>Development → post support tailored to scope</li>
-          </ul>
+          <h4>Full Documentary Support — Quote</h4>
+          <p>Development → post-production support, tailored to scope and deadlines.</p>
         </div>
       </div>
 
       <h3>Political Consulting</h3>
-      <div class="pricingGrid" aria-label="Political consulting pricing">
+      <div class="pricingGrid twoCol" aria-label="Political consulting pricing">
         <div class="pricingCard">
           <h4>Strategy Intensive (1 Hour) — $250</h4>
-          <ul>
-            <li>Win number, targeting, field plan, next steps</li>
-          </ul>
+          <p>Win number, targeting, field plan, and next steps.</p>
         </div>
 
         <div class="pricingCard">
-          <h4>Municipal Retainer — $3,000–6,000 / month</h4>
-          <ul>
-            <li>Plan + training + reporting cadence</li>
-          </ul>
+          <h4>Municipal Campaign Retainer — $3,000–6,000 / month</h4>
+          <p>Field plan + execution support, training, reporting cadence.</p>
         </div>
 
         <div class="pricingCard">
           <h4>State Legislative Retainer — $5,000–10,000 / month</h4>
-          <ul>
-            <li>Ops buildout + weekly goals + GOTV</li>
-          </ul>
+          <p>Field ops buildout, universes, weekly goals, GOTV structure.</p>
         </div>
 
         <div class="pricingCard">
           <h4>Congressional Retainer — $10,000–20,000+ / month</h4>
-          <ul>
-            <li>Full-scale field + ops systems</li>
-          </ul>
+          <p>Full-scale field + ops systems, staffing support, and performance tracking.</p>
         </div>
       </div>
+
     </section>
 
     <hr class="sectionRule" aria-hidden="true">
 
-    <section class="panel" aria-label="Smart Intake Form">
-      <h2 class="h2">Smart Intake Form</h2>
-      <p class="muted small">
-        Pick a project type and you’ll see the right questions — plus a rough estimate / breakdown.
-      </p>
+    <section class="panel panelHasCornerLogo" aria-label="Schedule">
+      <h2 class="h2">Schedule</h2>
 
-      <form
-        id="contactForm"
-        action="https://formspree.io/f/xdalazpw"
-        method="POST"
-        class="contactForm"
-        novalidate
-      >
-        <label>
-          Project Type *
-          <select id="projectType" name="project_type" required>
-            <option value="" selected disabled>Select one…</option>
-            <option value="media">Media Production</option>
-            <option value="consulting">Campaign Consulting</option>
-          </select>
-        </label>
-
-        <div class="formGrid">
-          <label>
-            Name *
-            <input type="text" name="name" autocomplete="name" required>
-          </label>
-
-          <label>
-            Email *
-            <input type="email" name="email" autocomplete="email" required>
-          </label>
-
-          <label>
-            Phone *
-            <input type="tel" name="telephone" autocomplete="tel" inputmode="tel" required>
-          </label>
-
-          <label>
-            Location (City/State)
-            <input type="text" name="location" autocomplete="address-level2">
-          </label>
-        </div>
-
-        <div id="mediaFields" class="subPanel hidden" aria-hidden="true">
-          <h3 class="h3">Media Details</h3>
-
-          <label>
-            Media Type *
-            <select id="mediaType" name="media_type">
-              <option value="" selected disabled>Select one…</option>
-              <option value="wedding">Wedding &amp; Pre-Wedding</option>
-              <option value="event">Event Videography</option>
-              <option value="interview">Interview</option>
-              <option value="commercial">Product &amp; Commercial</option>
-              <option value="architecture">Architectural &amp; Interior</option>
-              <option value="editing">Editing / Post-production</option>
-              <option value="other">Other</option>
-            </select>
-          </label>
-
-          <div class="formGrid">
-            <label>
-              Date (or target date) *
-              <input id="mediaDate" type="date" name="media_date">
-            </label>
-
-            <label id="coverageHoursWrap" class="hidden">
-              Coverage Hours (estimate)
-              <input id="coverageHours" type="number" name="coverage_hours" inputmode="numeric" min="1" step="1" placeholder="e.g., 6">
-            </label>
-          </div>
-
-          <label id="weddingPackageWrap" class="hidden">
-            Wedding Package *
-            <select id="weddingPackage" name="wedding_package">
-              <option value="" selected disabled>Select one…</option>
-              <option value="bronze">Bronze</option>
-              <option value="silver">Silver</option>
-              <option value="gold">Gold</option>
-              <option value="platinum">Platinum</option>
-            </select>
-          </label>
-
-          <label>
-            Details / Deliverables
-            <textarea id="deliverables" name="deliverables" rows="5" placeholder="Location, deliverables, vibe, audio needs, runtime, references, etc."></textarea>
-          </label>
-
-          <label id="otherDetailsWrap" class="hidden">
-            Describe what you’re looking for *
-            <textarea id="otherDetails" name="other_details" rows="4" placeholder="Type here…"></textarea>
-          </label>
-        </div>
-
-        <div id="consultingFields" class="subPanel hidden" aria-hidden="true">
-          <h3 class="h3">Consulting Details</h3>
-
-          <label>
-            Engagement Type *
-            <select id="consultingEngagement" name="consulting_engagement">
-              <option value="" selected disabled>Select one…</option>
-              <option value="one_hour">Strategy intensive (1 hour)</option>
-              <option value="project">Project support (scoped deliverables)</option>
-              <option value="retainer">Monthly support / retainer</option>
-              <option value="training">Training (staff/volunteers)</option>
-              <option value="other">Other</option>
-            </select>
-          </label>
-
-          <div class="formGrid">
-            <label id="monthsWrap" class="hidden">
-              How many months?
-              <input id="months" type="number" name="months" inputmode="numeric" min="1" step="1" placeholder="e.g., 3">
-            </label>
-          </div>
-
-          <label>
-            What do you need help with? *
-            <textarea name="consulting_needs" rows="5" placeholder="Win number, targeting, field plan, turf cutting, training, scripts, ops, timeline, etc."></textarea>
-          </label>
-        </div>
-
-        <div class="subPanel" aria-label="Rough estimate">
-          <h3 class="h3">Rough estimate / breakdown</h3>
-          <p id="quoteText" class="quoteText">Select a project type to see a rough estimate.</p>
-          <p class="muted small">
-            Directional estimate only. Final pricing depends on scope, travel, deliverables, and timeline.
-          </p>
-        </div>
-
-        <label>
-          Anything else to share?
-          <textarea name="notes" rows="4" placeholder="Timeline, constraints, links, references, preferred style, etc."></textarea>
-        </label>
-
-        <label>
-          Promo Code
-          <input type="text" name="promo_code" autocomplete="off">
-        </label>
-
-        <div class="hp" aria-hidden="true">
-          <label>
-            Leave this field empty
-            <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
-          </label>
-        </div>
-
-        <button id="submitBtn" type="submit">Send</button>
-        <p id="formStatus" class="formStatus" role="status" aria-live="polite"></p>
-      </form>
-    </section>
-
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel" aria-label="Schedule">
-      <div class="panelHeaderRow">
-        <h2 class="h2">Schedule</h2>
-        <img src="./assets/Calendly_logo.png" alt="Calendly" class="panelLogoHorizontal" />
-      </div>
+      <img
+        src="./assets/Calendly_logo.png"
+        alt="Calendly"
+        class="panelLogo"
+      />
 
       <div
-        class="calendly-inline-widget calendly-frame"
+        class="calendly-inline-widget"
         data-url="https://calendly.com/me--ujg"
-        style="min-width:320px;height:720px;"
+        class="calendly-frame"
       ></div>
-
-      <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
     </section>
 
     <hr class="sectionRule" aria-hidden="true">
 
-    <section class="panel" aria-label="Payment">
-      <div class="panelHeaderRow">
-        <h2 class="h2">Payment</h2>
-        <img src="./assets/Stripe_Logo,_revised_2016.svg.png" alt="Stripe" class="panelLogoHorizontal" />
-      </div>
+    <section class="panel panelHasCornerLogo" aria-label="Payment">
+      <h2 class="h2">Payment</h2>
+
+      <img
+        src="./assets/Stripe_Logo,_revised_2016.svg.png"
+        alt="Stripe"
+        class="panelLogo"
+      />
 
       <p>
         For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
@@ -461,10 +347,12 @@
         <a href="./refund.html">Refund</a>
       </p>
     </footer>
-  </main>
 
+  </main>
   <script src="./services-form.js" defer></script>
-  <script src="./nav.js" defer></script>
+
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+  <script src="./nav.js"></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
